# Casino

./: .gitignore  Cargo.toml  Config.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: blank.yml  config.yml
src/: main.rs
src/bot/: client.rs  errors.rs  mod.rs
src/bot/commands/: bal.rs  balance.rs  blackjack.rs  buy.rs  coinflip.rs  crash.rs  crime.rs  deposit.rs  dice.rs  help.rs  mod.rs  pay.rs  ping.rs  rob.rs  scratch.rs  shop.rs  slot_machine.rs  slut.rs  topmoney.rs  withdraw.rs  work.rs
src/config/: loader.rs  models.rs
src/services/: mod.rs
src/services/database/: abstraction.rs  db.rs  mod.rs  models.rs
src/services/shop/: mod.rs  models.rs  registry.rs
