[package]
name = "Casino"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
poise = "0.6.1"
rand = "0.9.2"
regex = "1.11.3"
serde = "1.0.228"
serenity = "0.12.4"
smallvec = "1.15.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
